--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,3 +2,5 @@ $body-font-family: 'Rubik', serif;
 $btn-text-transform: none;
 $btn-font-weight: 400;
 $btn-outline-border-width: medium;
+
+$snackbar-border-radius: 20px;
